prepare for next iteration
- moved file transfer
- added header for messages module

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,10 @@
-bin_PROGRAMS = zerosync
+bin_PROGRAMS = zerosync fileClient fileServer
+
 zerosync_SOURCES = msg.c
 zerosync_LDADD = -lzmq -lczmq -lzre
+
+fileClient_SOURCES = fileTransferClient.c
+fileClient_LDADD = -lzmq -lczmq
+
+fileServer_SOURCES = fileTransferServer.c
+fileServer_LDADD = -lzmq -lczmq
