update msg.h and fileTransferClient.c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,6 @@
-bin_PROGRAMS = zerosync fileClient fileServer
+bin_PROGRAMS = fileClient fileServer
 
-zerosync_SOURCES = msg.c
-zerosync_LDADD = -lzmq -lczmq -lzre
-
-fileClient_SOURCES = fileTransferClient.c
+fileClient_SOURCES = fileTransferClient.c msg.c
 fileClient_LDADD = -lzmq -lczmq
 
 fileServer_SOURCES = fileTransferServer.c
