added man page support, added documentation tags in code, added own selftest class

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,7 @@ libzsync_la_SOURCES = \
 
 AM_CPPFLAGS = -I$(top_srcdir)/include    
 
-bin_PROGRAMS = fileClient fileServer msg_selftest
+bin_PROGRAMS = fileClient fileServer zsync_selftest
 
 fileClient_SOURCES = fileTransferClient.c
 fileClient_LDADD = -lzmq -lczmq libzsync.la
@@ -19,5 +19,4 @@ fileClient_LDADD = -lzmq -lczmq libzsync.la
 fileServer_SOURCES = fileTransferServer.c
 fileServer_LDADD = -lzmq -lczmq libzsync.la
 
-msg_selftest_SOURCES = msg_test.c
-msg_selftest_LDADD = -lzmq -lczmq libzsync.la
+zsync_selftest_LDADD = libzsync.la
