--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,13 @@ before_script:
 - cd ..
 
 #   Zyre
-git clone git@github.com:zeromq/zyre.git
-cd zyre
-./autogen.sh
-./configure && make check
-sudo make install
-sudo ldconfig
-cd ..
+- git clone git@github.com:zeromq/zyre.git
+- cd zyre
+- ./autogen.sh
+- ./configure && make check
+- sudo make install
+- sudo ldconfig
+- cd ..
 
 #   Build and check libzsync
 script: autoreconf --install && ./configure && make && make check
