added zyre_node; save/load uuid; recv from zyre

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,11 +6,13 @@ pkgconfig_DATA =libzsync.pc
 include_HEADERS = \
     ../include/zs_msg.h \
     ../include/zs_fmetadata.h \
+    ../include/zsync_node.h \
     ../include/zsync_agent.h
 
 libzsync_la_SOURCES = \
     zs_msg.c \
     zs_fmetadata.c \
+    zsync_node.c \
     zsync_agent.c
 
 AM_CPPFLAGS = -I$(top_srcdir)/include    
