--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,7 @@ include_HEADERS = \
     ../include/zs_msg.h \
     ../include/zs_fmetadata.h \
     ../include/zsync_peer.h \
+    ../include/zsync_ftmanager.h \
     ../include/zsync_node.h \
     ../include/zsync_agent.h
 
@@ -14,6 +15,7 @@ libzsync_la_SOURCES = \
     zs_msg.c \
     zs_fmetadata.c \
     zsync_peer.c \
+    zsync_ftmanager.c \
     zsync_node.c \
     zsync_agent.c
 
@@ -28,4 +30,3 @@ fileServer_SOURCES = fileTransferServer.c
 fileServer_LDADD = libzsync.la
 
 zsync_selftest_LDADD = libzsync.la
-
