generate protocol to communicate with credit manager

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,7 @@ pkgconfig_DATA =libzsync.pc
 include_HEADERS = \
     ../include/zsync.h \
     ../include/zs_msg.h \
+    ../include/zsync_credit_msg.h \
     ../include/zs_fmetadata.h \
     ../include/zsync_peer.h \
     ../include/zsync_ftmanager.h \
@@ -15,6 +16,7 @@ include_HEADERS = \
 
 libzsync_la_SOURCES = \
     zs_msg.c \
+    zsync_credit_msg.c \
     zs_fmetadata.c \
     zsync_peer.c \
     zsync_ftmanager.c \
