updated worker api for credit and file transfer

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,6 +7,7 @@ include_HEADERS = \
     ../include/zsync.h \
     ../include/zs_msg.h \
     ../include/zsync_credit_msg.h \
+    ../include/zsync_ftm_msg.h \
     ../include/zs_fmetadata.h \
     ../include/zsync_peer.h \
     ../include/zsync_ftmanager.h \
@@ -17,6 +18,7 @@ include_HEADERS = \
 libzsync_la_SOURCES = \
     zs_msg.c \
     zsync_credit_msg.c \
+    zsync_ftm_msg.c \
     zs_fmetadata.c \
     zsync_peer.c \
     zsync_ftmanager.c \
@@ -36,4 +38,20 @@ TESTS = zsync_selftest
 
 generate-tags:
 	ctags *.c ~/workspace/zeromq/zyre/src/*.c ~/workspace/zeromq/czmq/src/*.c
+
+# Generate gsl code
+XML_SOURCE_CODE = \
+	zsync_msg.xml  \
+	zsync_credit_msg.xml \
+	zsync_ftm_msg.xml
+
+CODE_DEPENDENCY = $(XML_SOURCE_CODE:%.xml=%)
+
+code: $(CODE_DEPENDENCY)
+	echo Generated codec!
+
+# Make executes each line of a recipe in a seperate shell.
+# Hence we need to export and generate in one line.
+$(CODE_DEPENDENCY):
+	export PATH=@bindir@:$$PATH; gsl -q $@;
 
